# clExtendedApi

./: CMakeLists.txt  LICENSE  LICENSE.md  readme.md
OpenclHelpers/: opencl_additional_types.h  opencl_syntax.h  readme.md  syntax.h
example/: CMakeLists.txt
example/opencl/: CMakeLists.txt  hello_world_kernel.c
example/src/: HelloWorld.cpp  HelloWorld.h  main.cpp
headers/: ClContextHelper.h  DeviceBuffer.h  OpenclProgramUser.h  Queries.h  Tools.h
src/: ClContextHelper.cpp  OpenclProgramUser.cpp  Queries.cpp  Tools.cpp
